# merzol_studentportal_project

./: .gitignore  README.md  School Login.docx  exam_test_platform_mockup.html
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: auth.py  school_dashboard_stats.py  student.py  teacher.py
backend/app/core/: database.py  dependencies.py  firebase.py  init_db.py  settings.py
backend/app/models/: user.py
backend/app/schemas/: auth_schema.py  student_schema.py  teacher_schema.py
backend/app/services/: auth_service.py  student_service.py  teacher_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AppHeader.jsx  Header.jsx  ProfileMenu.jsx  StudentDashboard.jsx  TeacherDashboard.jsx
frontend/src/pages/: AddTeacher.jsx  Dashboard.jsx  Login.jsx  RoleSelect.jsx  SchoolDashboard.jsx
frontend/src/routes/: Router.jsx
frontend/src/services/: api.js  firebase.js
frontend/src/store/: authstore.js
